package dp.observer.interfaces;

public interface Getraenk {
    // das abstrakte Produkt "Getraenke"
    void kuehlen();
}
