package dp.observer.interfaces;

public interface Vorspeise {
    // das abstrakte Produkt "Vorspeise"
    void schnellVorbereiten();
}